--- a/toMylover.html
+++ b/toMylover.html
@@ -42,6 +42,10 @@
         loader.load('lantern/glbfile.glb', function (gltf) {
             const object = gltf.scene;
             object.scale.set(0.1, 0.1, 0.1); // 根据需要调整模型的缩放比例
+            
+            // 设置灯笼位置
+            object.position.set(0, 1, 0); // 例如，将灯笼放置在 y 轴上方 1 个单位的位置
+            
             scene.add(object);
 
             // 动画循环
