--- a/toMylover.html
+++ b/toMylover.html
@@ -3,7 +3,12 @@
 <head>
     <title>新年快乐！</title>
     <style>
-        body { margin: 0; overflow: hidden; }
+        body { 
+            margin: 0; 
+            overflow: hidden; 
+            background: url('lantern/bkg.png') no-repeat center center fixed; 
+            background-size: cover; 
+        }
         canvas { display: block; }
         #message {
             position: absolute;
