--- a/toMylover.html
+++ b/toMylover.html
@@ -6,7 +6,7 @@
         body { 
             margin: 0; 
             overflow: hidden; 
-            background: url('lantern/bkg.png') no-repeat center center fixed; 
+            background: url('https://wangq1h.github.io/lantern/bkg.png') no-repeat center center fixed; 
             background-size: cover; 
         }
         canvas { display: block; }
