--- a/toMylover.html
+++ b/toMylover.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>新年快乐！</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <style>
         body { 
             margin: 0; 
@@ -49,7 +55,7 @@
             object.scale.set(0.1, 0.1, 0.1); // 根据需要调整模型的缩放比例
             
             // 设置灯笼位置
-            object.position.set(0, 0, 0); // 例如，将灯笼放置在 y 轴上方 1 个单位的位置
+            object.position.set(0, 0, 0); // 将灯笼放置在中心位置
             
             scene.add(object);
 
