--- a/toMylover.html
+++ b/toMylover.html
@@ -12,8 +12,6 @@
         body { 
             margin: 0; 
             overflow: hidden; 
-            background: url('https://wangq1h.github.io/lantern/bkg.png') no-repeat center center fixed; 
-            background-size: cover; 
         }
         canvas { display: block; }
         #message {
@@ -27,13 +25,32 @@
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
             z-index: 100;
         }
+        #background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background-size: cover;
+            background-position: center;
+        }
     </style>
 </head>
 <body>
     <div id="message">❤️ 新年快乐 ❤️</div>
+    <div id="background"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script>
+        // 设置背景图片
+        const background = document.getElementById('background');
+        const img = new Image();
+        img.src = 'https://wangq1h.github.io/lantern/bkg.png';
+        img.onload = () => {
+            background.style.backgroundImage = `url(${img.src})`;
+        };
+
         // 初始化场景
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
