--- a/toMylover.html
+++ b/toMylover.html
@@ -46,7 +46,7 @@
         // 设置背景图片
         const background = document.getElementById('background');
         const img = new Image();
-        img.src = 'https://wangq1h.github.io/lantern/bkg.png';
+        img.src = 'lantern/bkg.png';
         img.onload = () => {
             background.style.backgroundImage = `url(${img.src})`;
         };
